# example-cpp2

./: CMakeLists.txt  README.md
cmake/: example-cppConfig.cmake.in
src/: main.cpp
